--- a/sati_django/src/static/templates/public/event/session_card.html
+++ b/sati_django/src/static/templates/public/event/session_card.html
@@ -27,5 +27,5 @@
     <noresult-message
                     class="mdl-grid mdl-card__actions mdl-card--border mdl-grid mdl-cell mdl-cell--12-col"
                     ng-hide="session.occurrences.length"
-                    ng-init="message = EventLabel">
+                    ng-init="message = EventLabel.no_results_occurrence()">
     </noresult-message>
