--- a/sati_django/src/static/css-main/style-base.css
+++ b/sati_django/src/static/css-main/style-base.css
@@ -1,3 +1,12 @@
+.error {
+  /*color: hsla(0, 95%, 35%, 1);
+  border: 1px solid hsla(0, 95%, 35%, 1);
+  background-color: hsla(0, 15%, 97%, 1);*/
+  color: hsla(9, 87%, 46%, 1);
+  border: 1px solid hsla(9, 87%, 46%, 1);
+  background-color: hsla(9, 15%, 97%, 1);
+}
+
 .img-responsive {
     display: block;
     max-width: 100%;
