--- a/sati_django/src/static/templates/public/event/event_list.html
+++ b/sati_django/src/static/templates/public/event/event_list.html
@@ -1,6 +1,6 @@
 <md-toolbar class="md-primary mdl-cell mdl-cell--12-col  mdl-grid m-w-720" >
     <div class="md-toolbar-tools">
-        <h2 class="md-flex" ng-bind="eventCtrl.EventLabel.filter_label_filter_event()"></h2>
+        <h2 class="md-flex" ng-bind="EventLabel.filter_label_filter_event()"></h2>
     </div>
 </md-toolbar>
 
@@ -9,19 +9,19 @@
                     filter-content">
 
     <md-input-container class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
-        <label ng-bind="eventCtrl.EventLabel.filter_label_event_name()"></label>
+        <label ng-bind="EventLabel.filter_label_event_name()"></label>
         <input ng-model="search.name">
     </md-input-container>
 
     <md-input-container class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
-        <label ng-bind="eventCtrl.EventLabel.filter_label_event_begin_date()"></label>
+        <label ng-bind="EventLabel.filter_label_event_begin_date()"></label>
         <md-datepicker ng-model="filter.begin_date" md-open-on-focus></md-datepicker>
     </md-input-container>
 
     <md-input-container class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
-        <label ng-bind="eventCtrl.EventLabel.filter_label_event_category()"></label>
+        <label ng-bind="EventLabel.filter_label_event_category()"></label>
         <md-select ng-model="search.category.id">
-            <md-option><em ng-bind="eventCtrl.Label.none()"></em></md-option>
+            <md-option><em ng-bind="Label.none()"></em></md-option>
             <md-option ng-repeat="category in eventCtrl.categories"
                        ng-value="category.id"
                        ng-bind="category.name">
@@ -36,7 +36,7 @@
                 ng-click="eventCtrl.clearFilter()"
                 class="md-raised md-primary mdl-cell--12-col"
                 aria-label="eventCtrl.Label.clear_filter()"
-                ng-bind="eventCtrl.Label.clear_filter()">
+                ng-bind="Label.clear_filter()">
         </md-button>
     </div>
 </div>
@@ -50,5 +50,6 @@
 
 <noresult-message
         class="mdl-grid mdl-cell mdl-cell--12-col"
-        ng-hide="eventCtrl.filteredEvents.length">
+        ng-hide="eventCtrl.filteredEvents.length"
+        ng-init="message = Label.no_results()">
 </noresult-message>
