--- a/sati_django/apps/public/templates/public/login.html
+++ b/sati_django/apps/public/templates/public/login.html
@@ -2,36 +2,72 @@
 
 {% block content %}
 
-    <div class="android-be-together-section mdl-typography--text-center" align="center">
+    {% include 'sati_utfpr/ng_messages.html' %}
 
-        <div class="mdl-layout mdl-js-layout mdl-color--grey-100" align="center">
-            <main class="mdl-layout__content">
-                <div class="mdl-card mdl-shadow--6dp">
-                    <div class="mdl-card__title mdl-color--primary mdl-color-text--white">
-                        <h2 class="mdl-card__title-text">SATI</h2>
-                    </div>
-                    <div class="mdl-card__supporting-text">
-                        <form action="{% url 'user_login' %}" method="POST">
-                            {% csrf_token %}
-                            <div class="mdl-textfield mdl-js-textfield">
-                                <input class="mdl-textfield__input" type="text" id="username" name="username" value="{{ username }}"/>
-                                <label class="mdl-textfield__label" for="username">Username</label>
-                            </div>
-                            <div class="mdl-textfield mdl-js-textfield">
-                                <input class="mdl-textfield__input" type="password" id="userpass" name="userpass" value="{{ userpass }}"/>
-                                <label class="mdl-textfield__label" for="userpass">Password</label>
-                            </div>
-                            <div class="mdl-card__actions mdl-card--border">
-                                <button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">Log in
-                                </button>
-                            </div>
-                        </form>
-                    </div>
+    <div class="mdl-grid" ng-controller="LoginCtrl as loginCtrl">
 
+
+
+        <div class="mdl-layout-spacer"></div>
+
+            <div class="mdl-card mdl-shadow--6dp  mdl-color--grey-100 vert-align">
+                <div class="mdl-card__title mdl-color--primary mdl-color-text--white">
+                    <div class="mdl-layout-spacer"></div>
+                    <h2 class="mdl-card__title-text  mdl-typography--text-center" ng-bind="CRUDLabel.label_login_title()"></h2>
+                    <div class="mdl-layout-spacer"></div>
                 </div>
-            </main>
-        </div>
+                <div class="mdl-card__supporting-text">
+                    <form name="login_form" action="{% url 'user_login' %}" method="POST">
+                        {% csrf_token %}
 
+                        <md-input-container class="mdl-cell mdl-cell--12-col">
+                            <label  ng-bind="CRUDLabel.label_email()"></label>
+                            <input required  maxlength="{[{ FieldSize.email() }]}" md-no-asterisk
+                                   type="email" name="email" ng-model="loginCtrl.login_form.email"
+                                   id="email"/>
+                            <div ng-messages="login_form.email.$error" role="alert">
+                                <div ng-messages-include="form-messages-error"></div>
+                            </div>
+                        </md-input-container>
+
+                        <md-input-container class="mdl-cell mdl-cell--12-col">
+                            <label ng-bind="CRUDLabel.label_password()"></label>
+                            <input required type="password" maxlength="{[{ FieldSize.password() }]}" md-no-asterisk
+                                   ng-model="loginCtrl.login_form.password"
+                                   id="password" name="password" >
+                            <div ng-messages="login_form.password.$error" role="alert">
+                                <div ng-messages-include="form-messages-error"></div>
+                            </div>
+                        </md-input-container>
+
+                        <!--div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                            <input class="mdl-textfield__input" name="username" value="{{ username }}"/>
+                            <div ng-messages="login.username.$error" role="alert">
+                                <div ng-messages-include="form-messages-error"></div>
+                            </div>
+                        </div>
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                            <input class="mdl-textfield__input" type="password" id="userpass" name="userpass" value="{{ userpass }}"/>
+                            <label class="mdl-textfield__label" for="userpass" ng-bind="CRUDLabel.label_password()"></label>
+                        </div-->
+                        <div class="mdl-card__actions mdl-card--border">
+                            <!--button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">Log in
+                            </button-->
+                            <div class="mdl-layout-spacer"></div>
+                            <md-button
+                                    ng-click="login()"
+                                   aria-label="Add"
+                                   class="md-raised md-primary mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-cell--2-col-phone vert-align"
+                                   ng-bind="CRUDLabel.label_login_button()">
+                            </md-button>
+                            <div class="mdl-layout-spacer"></div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
+        <div class="mdl-layout-spacer"></div>
 
     </div>
+
 {% endblock %}
