--- a/sati_django/src/static/css-main/style-base.css
+++ b/sati_django/src/static/css-main/style-base.css
@@ -1,3 +1,12 @@
+.error {
+  /*color: hsla(0, 95%, 35%, 1);
+  border: 1px solid hsla(0, 95%, 35%, 1);
+  background-color: hsla(0, 15%, 97%, 1);*/
+  color: hsla(9, 87%, 46%, 1);
+  border: 1px solid hsla(9, 87%, 46%, 1);
+  background-color: hsla(9, 15%, 97%, 1);
+}
+
 .img-responsive {
     display: block;
     max-width: 100%;
@@ -56,6 +65,10 @@
     height: 300px;
 }
 
+.h-600 {
+    height: 600px;
+}
+
 .h-100 {
     height: 100px;
 }
@@ -63,3 +76,4 @@
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important;
 }
+
