--- a/sati_django/apps/dashboard/templates/dashboard/base.html
+++ b/sati_django/apps/dashboard/templates/dashboard/base.html
@@ -127,6 +127,8 @@
                     <a class="mdl-navigation__link" href="/dashboard/edition"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">bookmark</i>Edição</a>
                     {% endif %}
                     <a class="mdl-navigation__link" href="/dashboard/event"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">event</i>Evento</a>
+                    <a class="mdl-navigation__link" href="/dashboard/get_all_participants"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">event</i>Get E/P</a>
+
                     <a class="mdl-navigation__link" href="/dashboard/logout"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">exit_to_app</i>Logout</a>
                     <div class="mdl-layout-spacer"></div>
                     <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">help_outline</i><span class="visuallyhidden">Help</span></a>
