--- a/sati_django/apps/public/templates/public/login.html
+++ b/sati_django/apps/public/templates/public/login.html
@@ -11,18 +11,21 @@
         <div class="mdl-layout-spacer"></div>
 
             <div class="mdl-card mdl-shadow--6dp  mdl-color--grey-100 vert-align">
+
+
                 <div class="mdl-card__title mdl-color--primary mdl-color-text--white">
                     <div class="mdl-layout-spacer"></div>
                     <h2 class="mdl-card__title-text  mdl-typography--text-center" ng-bind="CRUDLabel.label_login_title()"></h2>
                     <div class="mdl-layout-spacer"></div>
                 </div>
                 <div class="mdl-card__supporting-text">
+
                     <form name="login_form" action="{% url 'user_login' %}" method="POST">
                         {% csrf_token %}
 
                         <md-input-container class="mdl-cell mdl-cell--12-col">
                             <label  ng-bind="CRUDLabel.label_email()"></label>
-                            <input required  maxlength="{[{ FieldSize.email() }]}" md-no-asterisk
+                            <input  required maxlength="{[{ FieldSize.email() }]}" md-no-asterisk
                                    type="email" name="email" ng-model="loginCtrl.login_form.email"
                                    id="email"/>
                             <div ng-messages="login_form.email.$error" role="alert">
@@ -40,25 +43,15 @@
                             </div>
                         </md-input-container>
 
-                        <!--div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                            <input class="mdl-textfield__input" name="username" value="{{ username }}"/>
-                            <div ng-messages="login.username.$error" role="alert">
-                                <div ng-messages-include="form-messages-error"></div>
-                            </div>
-                        </div>
-                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                            <input class="mdl-textfield__input" type="password" id="userpass" name="userpass" value="{{ userpass }}"/>
-                            <label class="mdl-textfield__label" for="userpass" ng-bind="CRUDLabel.label_password()"></label>
-                        </div-->
                         <div class="mdl-card__actions mdl-card--border">
                             <!--button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">Log in
                             </button-->
                             <div class="mdl-layout-spacer"></div>
-                            <md-button
-                                    ng-click="login()"
-                                   aria-label="Add"
-                                   class="md-raised md-primary mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-cell--2-col-phone vert-align"
-                                   ng-bind="CRUDLabel.label_login_button()">
+                            <md-button type="submit"
+                                       ng-disabled="!login_form.$valid"
+                                       aria-label="Add"
+                                       class="md-raised md-primary mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-cell--2-col-phone vert-align"
+                                       ng-bind="CRUDLabel.label_login_button()">
                             </md-button>
                             <div class="mdl-layout-spacer"></div>
                         </div>
