--- a/sati_django/apps/public/templates/event/event_detail.html
+++ b/sati_django/apps/public/templates/event/event_detail.html
@@ -18,6 +18,7 @@
 
 
         <div class="mdl-grid mdl-grid max-w-1280 event-detail__description ">
+
             <md-toolbar class="md-theme-light  vert-align mdl-grid mdl-grid">
                 <div class="md-display-1 mdl-cell--4-col">
                     <span><i class="material-icons vert-align" role="presentation">label</i><label class="vert-align" ng-bind="' ' + eventDetail.event.category.name"></label></span>
@@ -26,7 +27,12 @@
                 <div class="md-display-1 mdl-typography--text-right mdl-cell--4-col">
                    <span class="vert-align" ng-bind="eventDetail.event.fee == 0 ? 'Grátis' : (eventDetail.event.fee | currency) "></span>
                 </div>
+                <span class="ribbon top-right ribbon-warning ribbon-session" ng-show="eventDetail.event.can_donate">
+                    <small ng-bind="EventLabel.donation()"></small>
+                </span>
             </md-toolbar>
+
+
 
             <hr/>
 
