--- a/sati_django/apps/public/templates/public/css.html
+++ b/sati_django/apps/public/templates/public/css.html
@@ -27,5 +27,13 @@
         background: url('{% static '/images/event/event-headline-2.jpg' %}') center;
     }
 
+    .mdl-layout-title__image-drawer {
+        background: url('{% static '/images/sati/logo.png' %}') center;
+        width: auto;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+    }
+
 
 </style>
