--- a/sati_django/apps/public/templates/public/index.html
+++ b/sati_django/apps/public/templates/public/index.html
@@ -6,13 +6,19 @@
 
     <div class="index-headline mdl-cell--12-col">
         <div class="index-headline-image"></div>
-        <div class="index-headline-text">
-            <div class="mdl-typography--font-light mdl-typography--display-1-color-contrast">Customised by you, for you</div>
-            <p class="mdl-typography--font-light">
-                Put the stuff that you care about right on your home screen: the latest news, the weather or a stream of your recent photos.
-                <br />
-                <a href="" class="android-link mdl-typography--font-light">Customise your phone</a>
+        <div class="index-headline-text mdl-grid mdl-cell--12-col mdl-typography--text-center">
+            <div class="mdl-typography--font-light mdl-typography--display-1-color-contrast mdl-cell--12-col">
+                Semana de Atualização em Tecnologia da Informação - 2016 <br/> Acessibilidade
+            </div>
+            <div class="mdl-layout-spacer"></div>
+
+            <p class="mdl-typography--font-light mdl-cell--12-col">
+                De 26 a 30 de setembro de 2016
+                <!--br />
+                < a href="" class="android-link mdl-typography--font-light">Customise your phone</a -->
             </p>
+            <div class="mdl-layout-spacer"></div>
+
         </div>
     </div>
 
