--- a/sati_django/src/static/templates/public/event/event_card.html
+++ b/sati_django/src/static/templates/public/event/event_card.html
@@ -84,5 +84,5 @@
 
         <div class="mdl-layout-spacer"></div>
 
-        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" ng-href="/event/{[{ event.id }]}">Ver mais</a>
+        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" ng-href="/event/{[{ event.id }]}" target="_blank">Ver mais</a>
     </div>
